--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -86,9 +86,9 @@ jobs:
       - name: Terraform plan
         if: ${{ github.event.inputs.MODE == 'plan' }}
         working-directory: infra/envs/dev
-        run: terraform plan -no-color -input=false -var="state_bucket_name=${{ github.event.inputs.STATE_BUCKET_NAME }}" -var="db_username=${{ secrets.DB_USERNAME }}" -var="db_password=${{ secrets.DB_PASSWORD }}"
+        run: terraform plan -no-color -input=false -var="state_bucket_name=${{ github.event.inputs.STATE_BUCKET_NAME }}" -var="db_username=${{ secrets.DB_USERNAME }}"
 
       - name: Terraform apply
         if: ${{ github.event.inputs.MODE == 'apply' }}
         working-directory: infra/envs/dev
-        run: terraform apply -auto-approve -input=false -var="state_bucket_name=${{ github.event.inputs.STATE_BUCKET_NAME }}" -var="db_username=${{ secrets.DB_USERNAME }}" -var="db_password=${{ secrets.DB_PASSWORD }}"
+        run: terraform apply -auto-approve -input=false -var="state_bucket_name=${{ github.event.inputs.STATE_BUCKET_NAME }}" -var="db_username=${{ secrets.DB_USERNAME }}"
