--- a/infra/docker/prometheus/Dockerfile
+++ b/infra/docker/prometheus/Dockerfile
@@ -1,9 +1,13 @@
 # On part de l’image officielle Prometheus
 FROM prom/prometheus:v2.52.0
-ADD prometheus.yml /etc/prometheus/
+
+# Copier le script d'entrypoint qui générera la config dynamiquement
+COPY --chmod=755 docker-entrypoint.sh /docker-entrypoint.sh
 
 # Dossier de config Prometheus
 VOLUME ["/etc/prometheus"]
 
 # Prometheus expose son UI sur le port 9090
 EXPOSE 9090
+
+ENTRYPOINT ["/docker-entrypoint.sh"]
