--- a/.github/workflows/grafana.yml
+++ b/.github/workflows/grafana.yml
@@ -46,4 +46,32 @@ jobs:
       - name: Output image URL
         run: |
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          echo "Image pushed: $ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}:latest"
+          ECR_URI=$ACCOUNT_ID.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPOSITORY }}
+          
+          echo "### 🐳 Grafana Image Built Successfully" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "**Repository:** ${{ env.ECR_REPOSITORY }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Region:** ${{ env.AWS_REGION }}" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          echo "### 📦 Image Details:" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- **ECR URI:** \`${ECR_URI}:latest\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Tag:** \`latest\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          echo "### 🔧 Customizations Included:" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- ✅ Custom dashboards pre-configured" >> $GITHUB_STEP_SUMMARY
+          echo "- ✅ Prometheus datasource auto-provisioned" >> $GITHUB_STEP_SUMMARY
+          echo "- ✅ Environment-specific configurations" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          echo "### 🚀 Deployment:" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "The ECS service will automatically pull the new image on next deployment." >> $GITHUB_STEP_SUMMARY
+          echo "To force update the running service:" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`bash" >> $GITHUB_STEP_SUMMARY
+          echo "aws ecs update-service --cluster iot-playground-cluster-dev \\" >> $GITHUB_STEP_SUMMARY
+          echo "  --service iot-playground-grafana-dev --force-new-deployment" >> $GITHUB_STEP_SUMMARY
+          echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
