Empêcher la concurrence sur les jobs bootstrap + plus de cron pour le destroy et stop ressources

--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -1,7 +1,13 @@
 name: "Terraform Bootstrap"
+
 on:
   repository_dispatch:
     types: [trigger-bootstrap]
+
+# Empêcher les exécutions concurrentes
+concurrency:
+  group: bootstrap-infrastructure
+  cancel-in-progress: false
 
 env:
   AWS_REGION: eu-west-3
