--- a/.github/workflows/bootstrap-manual.yml
+++ b/.github/workflows/bootstrap-manual.yml
@@ -1,4 +1,5 @@
 name: "Terraform Bootstrap (Manual Mode)"
+
 on:
   workflow_dispatch:
     inputs:
@@ -20,6 +21,11 @@ on:
         required: false
         type: boolean
         default: false
+
+# Empêcher les exécutions concurrentes avec bootstrap.yml
+concurrency:
+  group: bootstrap-infrastructure
+  cancel-in-progress: false
 
 env:
   AWS_REGION: eu-west-3
@@ -184,4 +190,3 @@ jobs:
           echo "2. Configure your frontend with the API endpoints" >> $GITHUB_STEP_SUMMARY
           echo "3. Access Grafana to monitor your infrastructure" >> $GITHUB_STEP_SUMMARY
           echo "4. Check CloudWatch logs for application insights" >> $GITHUB_STEP_SUMMARY
-
