--- a/.github/workflows/terraform-destroy.yml
+++ b/.github/workflows/terraform-destroy.yml
@@ -14,6 +14,11 @@ on:
         default: "iot-playground-tfstate"
         required: true
 
+# Empêcher les exécutions concurrentes avec bootstrap.yml et bootstrap-manual.yml
+concurrency:
+  group: bootstrap-infrastructure
+  cancel-in-progress: false
+
 env:
   AWS_REGION: eu-west-3
   DDB_LOCK_TABLE: terraform-locks
