--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,41 @@
-# === Terraform ===
-*.tfstate
-*.tfstate.*
-crash.log
-crash.*.log
-override.tf
-override.tf.json
-*_override.tf
-*_override.tf.json
-.terraform/
-.terraform.lock.hcl
+# Terraform
+**/.terraform/
+**/.terraform.lock.hcl
+**/terraform.tfstate
+**/terraform.tfstate.backup
+**/*.tfplan
+**/*.tfvars.backup
 
-# Plans locaux
-*.plan
+# Lambda ZIP files
+**/lambda_*.zip
 
-# Variables sensibles (ne pas commit les tfvars avec secrets)
-*.tfvars.json
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+env/
+*.egg-info/
 
-# === Logs & OS ===
-*.log
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
 .DS_Store
 Thumbs.db
 
-# === VS Code ===
-.vscode/
-.history/
+# Logs
+*.log
 
+# Secrets
+*.pem
+*.key
+.env
+.env.local
 
-.idea/
