--- a/.github/workflows/deploy-lambdas.yml
+++ b/.github/workflows/deploy-lambdas.yml
@@ -29,6 +29,60 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.AWS_REGION }}
 
+      - name: Create S3 Backend + DynamoDB (if not exists)
+        run: |
+          set -e
+          BUCKET="iot-playground-tfstate-serverless"
+          REGION="${{ env.AWS_REGION }}"
+          
+          # S3 bucket (idempotent)
+          if aws s3api head-bucket --bucket "$BUCKET" 2>/dev/null; then
+            echo "✅ Bucket $BUCKET already exists"
+          else
+            aws s3api create-bucket --bucket "$BUCKET" \
+              --region "$REGION" \
+              --create-bucket-configuration LocationConstraint="$REGION"
+            echo "✅ Created bucket $BUCKET"
+          fi
+          
+          # Enable versioning
+          aws s3api put-bucket-versioning \
+            --bucket "$BUCKET" \
+            --versioning-configuration Status=Enabled
+          echo "✅ Versioning enabled"
+          
+          # Enable encryption
+          aws s3api put-bucket-encryption \
+            --bucket "$BUCKET" \
+            --server-side-encryption-configuration '{
+              "Rules": [{
+                "ApplyServerSideEncryptionByDefault": {
+                  "SSEAlgorithm": "AES256"
+                }
+              }]
+            }'
+          echo "✅ Encryption enabled"
+          
+          # Block public access
+          aws s3api put-public-access-block \
+            --bucket "$BUCKET" \
+            --public-access-block-configuration \
+              BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
+          echo "✅ Public access blocked"
+          
+          # DynamoDB table (idempotent)
+          if aws dynamodb describe-table --table-name terraform-lock-serverless --region "$REGION" >/dev/null 2>&1; then
+            echo "✅ DynamoDB table terraform-lock-serverless already exists"
+          else
+            aws dynamodb create-table \
+              --table-name terraform-lock-serverless \
+              --region "$REGION" \
+              --billing-mode PAY_PER_REQUEST \
+              --attribute-definitions AttributeName=LockID,AttributeType=S \
+              --key-schema AttributeName=LockID,KeyType=HASH
+            echo "✅ Created DynamoDB table terraform-lock-serverless"
+          fi
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
